--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Monkelabs" data-react-helmet="true">
     <meta name="theme-color" content="#05FFFF">
-    <meta content="🔗 THE ORCS NFTs MINTING LINK ✅" property="og:title">
+    <meta content="🔗 DISARTICULATED SKULLYS NFTs MINTING LINK ✅" property="og:title">
     <meta content="
 	
     ❗ We are glad to to announce that the minting of 5,555 DISARTICULATED SKULLYS NFT is live!
